samples/_failures_safe/1761307933_71d3b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31232af1.c: In function ‘main’:
./samples/SAFE/__tmp_31232af1.c:138:9: error: expected declaration or statement at end of input
  138 |         choice = read_int("Select operation (1-5): ", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_31232af1.c:138:9: error: expected declaration or statement at end of input
